# repo-inspector

./: .gitignore  LICENSE  README.md  pyproject.toml
repo_inspector/: __init__.py  analyzer.py  chunker.py  cli.py  diagrams.py  loader.py  output.py  summarizer.py
repo_inspector/prompts/: __init__.py  beginner.txt  beginner_synthesis.txt  diagram.txt  senior.txt  senior_synthesis.txt
